--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:wear:26.1.0'
+    implementation 'com.android.support:support-annotations:26.1.0'
     compileOnly 'com.google.android.wearable:wearable:2.2.0'
 }
