--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:wear:26.1.0'
     implementation 'com.android.support:support-annotations:26.1.0'
+    implementation 'com.android.support:support-v13:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compileOnly 'com.google.android.wearable:wearable:2.2.0'
 }
