Implements network connectivity module and login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -42,7 +43,8 @@
             android:label="@string/title_activity_login" />
         <activity
             android:name=".AthleteTabActivity"
-            android:label="@string/title_activity_athelete_tab"></activity>
+            android:label="@string/title_activity_athelete_tab" />
+
     </application>
 
 </manifest>
