--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.android.support:support-v13:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compileOnly 'com.google.android.wearable:wearable:2.2.0'
+    compile 'com.android.volley:volley:1.1.0'
 }
