--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation 'com.android.support:support-annotations:26.1.0'
     implementation 'com.android.support:support-v13:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     compileOnly 'com.google.android.wearable:wearable:2.2.0'
     compile 'com.android.volley:volley:1.1.0'
+
 }
