--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "sportsanalytics.er_lab.com.sportsanalyticsandroidsmartwatch"
-        minSdkVersion 26
+        minSdkVersion 25
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -15,10 +15,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.android.support:wearable:2.2.0'
     implementation 'com.google.android.gms:play-services-wearable:11.8.0'
     implementation 'com.android.support:percent:26.1.0'
@@ -31,5 +33,4 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     compileOnly 'com.google.android.wearable:wearable:2.2.0'
     compile 'com.android.volley:volley:1.1.0'
-
 }
