--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".AppManager"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -46,7 +47,10 @@
             android:label="@string/title_activity_athelete_tab" />
         <activity
             android:name=".TeamsActivity"
-            android:label="@string/title_activity_teams"></activity>
+            android:label="@string/title_activity_teams" />
+        <activity
+            android:name=".AthletesActivity"
+            android:label="@string/title_activity_athletes"></activity>
     </application>
 
 </manifest>
