--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     compileOnly 'com.google.android.wearable:wearable:2.2.0'
     compile 'com.android.volley:volley:1.1.0'
+    compile 'org.apache.commons:commons-math3:3.5'
+    implementation 'com.android.support:design:26.1.0'
 }
